--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <p class="h">New Hadith Everyday</p>
             <p id="copy">©MUNAF</p>
             
-            <!-- <p id="hadith-source"></p> -->
+            <!--- <p id="hadith-source"></p> -->
         </div>
     </div>
     <script>
